# tgtracker

./: .clang-format  .gitignore  .gitmodules  .llvmenv  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  README.md  justfile  license.template  rustfmt.toml  tokamak.toml
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: c-cpp.yml
core/: .gitignore  Cargo.toml  README.md  justfile
core/src/: lib.rs
core/src/audio/: busses.rs  mod.rs
core/src/audio/backend/: mod.rs  sio.rs
core/src/config/: keybindings.rs  mod.rs  settings.rs
core/src/plugin/: mod.rs
core/src/tracker/: effects.rs  mod.rs  note.rs  pattern.rs
core/src/video/: mod.rs
examples/: Cargo.toml  graph.rs
examples/player-cpal/: Cargo.toml
examples/player-cpal/src/: main.rs
examples/support/: mod.rs
juce/: tgtracker.jucer
juce/Builds/CodeBlocksWindows/: resources.rc  tgtracker.cbp
juce/Builds/LinuxMakefile/: Makefile
juce/Builds/VisualStudio2019/: tgtracker.sln  tgtracker_App.vcxproj  tgtracker_App.vcxproj.filters
juce/JuceLibraryCode/: AppConfig.h  JuceHeader.h
juce/Source/: Main.cpp  MainComponent.h
scripts/: builddeps.sh  getdeps.sh
specs/: Cargo.toml  MODULE.md  README.md  The Octave_ Tuning at A432 or F432.html  app.md  justfile  module.md  tango-build.rs
specs/backends/: backends.md
specs/backends/gfx/: gfx.md
specs/backends/sdl/: sdl.md
specs/chuck/: chuck.md
specs/editor/: graph_editor.md  instrument_editor.md  sample_editor.md  song_editor.md
specs/events/: triggers.md
specs/faust/: faust.md
specs/keybindings/: milkytracker.md
specs/pattern/: effects.md  track.md
specs/scripting/: jupyter-notebook.md
specs/src/: justfile  lib.md  lib.rs
specs/src/core/: README.md  README.rs  app.md  app.rs  chuck.md  chuck.rs  gwion.md  gwion.rs  lua.md  lua.rs  mod.md  mod.rs  sdl2.md  settings.md  settings.rs  wren.md  wren.rs
specs/src/core/backends/: backends.md  backends.rs  busses.md  busses.rs  faust.md  faust.rs  mod.md  mod.rs  multi_frontend.md  multi_frontend.rs  settings.md  settings.rs
specs/src/core/backends/chuck/: chuck.md  chuck.rs  mod.md  mod.rs
specs/src/core/backends/faust/: faust.rs  mod.md  mod.rs
specs/src/core/backends/gfx/: gfx.md  gfx.rs  mod.md
specs/src/core/backends/keybindings/: fasttracker2.md  fasttracker2.rs  milkytracker.rs  mod.md  mod.rs
specs/src/core/backends/sdl/: mod.md  sdl.rs
specs/src/core/events/: mod.md  mod.rs  triggers.md  triggers.rs
specs/src/core/nuklear/: mod.md
specs/src/core/pattern/: effects.md  effects.rs  mod.md  mod.rs  note.md  note.rs  pattern.md  pattern.rs  sequence.md  sequence.rs  track.rs
specs/src/core/scripting/: jupyter_notebook.rs  lua.md  lua.rs  mod.md  mod.rs
specs/src/core/scripts/: long.ck  replace.ck  status.ck
specs/src/frontend/: README.md  README.rs  lua.md  lua.rs  main.md  main.rs  mod.md  mod.rs  multi_frontend.md  multi_frontend.rs  sdl2.md  sdl2.rs
specs/src/frontend/editor/: clipboard.md  clipboard.rs  graph_editor.md  graph_editor.rs  instrument_editor.md  instrument_editor.rs  mod.md  mod.rs  sample_editor.rs  song_editor.md  song_editor.rs
specs/src/frontend/view/: channel.md  channel.rs  channel_mixer.md  channel_mixer.rs  dialog.md  dialog.rs  mod.md  mod.rs  settings.md  settings.rs
specs/src/scripts/: README.md  README.rs  dither.ck  follower.ck  kb.ck  shred.ck  test.lua
specs/src/util/: mod.md  mod.rs
specs/view/: channel_mixer.md  dialog.md  settings.md
src/: agraph.rs  all_winit_glium.rs  all_winit_glium_threaded.rs  allwidgets.rs  canvas.rs  dsp_graph.rs  file_navigator.rs  graph.rs  list_select.rs  main.cpp  main.rs  old_demo.rs  support.rs  text_edit.rs
src/backend/: keybindings.rs  mod.rs  settings.rs
src/backend/audio/: init.rs  midi.rs  mod.rs  osc.rs
src/dsp_graph/: mod.rs
src/editor/: mod.rs
src/fileops/: mod.rs
src/frontend/: conrod_ui.rs  mod.rs
src/instrument/: mod.rs
src/old/: allwidgets.rs  old_demo.rs
src/old/audio/: mod.rs
src/old/dsp_graph/: mod.rs  nnode.rs
src/old/editor/: mod.rs
src/old/fileops/: list_select.rs  mod.rs
src/old/instrument/: mod.rs
src/old/osc/: mod.rs  receiver.rs  sender.rs
src/old/pattern/: mod.rs
src/old/sample/: mod.rs
src/old/support/: mod.rs
src/old/ui/: mod.rs
src/pattern/: mod.rs
src/sample/: mod.rs
src/support/: mod.rs
src/tests/: mod.rs
