[package]
name = "tgtracker"
description = "A music tracker from the future"
version = "0.1.0-alpha"
authors = [
    "Andrew Prentice <scalarwaves@null.net>",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/tonal-glyph/tgtracker.git"
categories = ["multimedia::audio"]

[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "tgtracker"
path = "src/main.rs"

[dependencies]
tgtracker_specs = { path = "specs", version = "0.1.0" }
tgtracker_core = { path = "core", version = "0.1.0" }

[dev-dependencies]
# grcov = "0.5.0"                 # code coverage
# mockstream = "0.0.3"            # mock read+write streams
# proptest = "0.9.4"              # property testing
# tarpaulin = "0.1.0"             # code coverage

[badges]
travis-ci = { repository = "tonal-glyph/tgtracker" }
codecov = { repository = "tonal-glyph/tgtracker" }
maintenance = { status = "experimental" }

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = true

[workspace]
members = [
    "core",
    "specs",
]
