[package]
name = "tgtracker_core"
version = "0.1.0"
authors = ["Andrew Prentice <scalarwaves@null.net>"]
edition = "2018"

[dependencies]
# bincode = "1.1.4"               # inter-process comm
# cpal = "0.10.0"                 # x-platform audio library
# daggy = "0.6.0"                 # directed acyclic graphs
# dsp-chain = "0.13.1"            # digital signal processing graphs
envelope = "0.8.1"              # envelopes
# failure = "0.1.5"               # error handling
# hertz = "0.3.0"                 # fine-grained control over frequencies
# hound = "3.4.0"                 # wav encoding/decoding
# instrument = "0.2.0"            # instrument stuff
keybind = "0.1.0"               # set up key bindings
# lazy_static = "1.4.0"           # lazy evaluation
# midir = "0.5.0"                 # x-platform realtime MIDI IO
# panning = "0.1.1"               # panning stuff
# petgraph = "0.4.13"             # graph data structures
# pitch_calc = "0.11.1"           # handy conversions
# time_calc = "0.13.0"            # handy conversions
# rand = "0.7.0"                  # random number stuff
# ron = "0.5.1"                   # rusty object notation
# rosc = "0.2.0"                  # open sound control
# rustfft = "3.0.0"               # compute any size FFT in O(nlogn) time
# sample = "0.10.0"               # PCM DSP
# serde = "1.0.99"                # serialization
# serde_derive = "1.0.99"         # derive
# serde_bytes = "0.11.2"          # for wrapping osc blobs
#serde_osc = "0.4.2"             # serde for osc
# spin_sleep = "0.3.7"
# yansi = "0.5.0"                 # easy terminal coloring

# [target.'cfg(unix)'.dependencies]
# libloading = "0.5.2"
# samplerate = "0.2.1"
# sdl2 = "0.32.2"
# grcov = "0.5.0"                 # code coverage
# mockstream = "0.0.3"            # mock read+write streams
# proptest = "0.9.4"              # property testing
# tarpaulin = "0.1.0"                   # code coverage

# [dependencies.rustbreak]
# features = ["bin_enc"]
# version = "2.0.0-rc3"