[package]
name = "tgtracker_specs"
description = "tgtracker literate programming sandbox with tango"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Andrew Prentice <scalarwaves@null.net>"]
edition = "2018"
build = "tango-build.rs"

[dependencies]
envelope = "0.8.1"
gfx = "0.18.2"
include-lua = "0.1.4"
keybind = "0.1.0"
lazy_static = "1.4.0"
libc = "0.2.65"
nuklear-rust = "0.6.2"
regex = "1.3.1"
rlua = "0.16.3"
sdl2 = "0.32.2"

[build-dependencies]
tango = "0.8.2"

# [lib]
# name = "core_specs"
# path = "core/lib.rs"

# [[bin]]
# name = "frontend_specs"
# path = "frontend/main.rs"