[package]
name = "tgtracker_specs"
description = "tgtracker literate programming sandbox with tango"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Andrew Prentice <scalarwaves@null.net>"]
edition = "2018"
build = "tango-build.rs"

[dependencies]
conrod_core = "0.68.0"
conrod_gfx = "0.68.0"
conrod_winit = "0.68.0"
envelope = "0.8.1"
find_folder = "0.3.0"
gfx = "0.18.2"
gfx_core = "0.9.2"
gfx_window_glutin = "0.31"
glutin = "0.22.0-alpha5"
image = "0.23.0-preview.0"
include-lua = "0.1.4"
keybind = "0.1.0"
lazy_static = "1.4.0"
libc = "0.2.66"
petgraph = "0.4"
rand = "0.7.2"
regex = "1.3.1"
rlua = "0.17.0"
sdl2 = "0.32.2"
winit = "0.20.0-alpha4"

[build-dependencies]
tango = "0.8.2"

[lib]
name = "tgtracker_specs"
path = "src/lib.rs"

[[bin]]
name = "frontend_specs"
path = "src/frontend/main.rs"